Update vercel.json to enforce Frankfurt region deployment

--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,7 @@
     "silent": true
   },
   "buildCommand": "next build",
-  "outputDirectory": ".next"
+  "outputDirectory": ".next",
+  "public": false,
+  "cleanUrls": true
 } 
